# refills_msgs

./: CMakeLists.txt  README.md  package.xml
action/: CountProducts.action  DetectFacings.action  DetectShelfLayers.action  ProductCounting.action  ProductIdentification.action  Scanning.action
msg/: Barcode.msg  FullBodyPath.msg  FullBodyPosture.msg  JointPosition.msg  Location.msg  Separator.msg  SeparatorArray.msg
srv/: CountObjects.srv  FinishPerception.srv  QueryCountProductsPosture.srv  QueryDetectFacingsPath.srv  QueryDetectShelfLayersPath.srv  QueryFacings.srv  QueryLogging.srv  QueryShelfLayers.srv  QueryShelfSystems.srv
