<?xml version="1.0"?>
<package format="2">
  <name>refills_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for the ARRINA project.</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
